--- a/apps/client-web-app/src/assets/prime/_primeng-extends.scss
+++ b/apps/client-web-app/src/assets/prime/_primeng-extends.scss
@@ -1,3 +1,12 @@
+.p-menuitem-link-active {
+  background-color: var(--surface-hover);
+  border-radius: var(--border-radius);
+}
+
+.p-menu {
+  border-radius: var(--border-radius);
+}
+
 .p-password {
   width: 100%;
 }
@@ -47,6 +56,7 @@ p-button.w-full .p-button {
 
 .p-accordion {
   background: transparent;
+  border-radius: var(--border-radius);
 }
 
 .p-accordion-tab {
