--- a/apps/client-web-app/src/assets/prime/_primeflex-extra.scss
+++ b/apps/client-web-app/src/assets/prime/_primeflex-extra.scss
@@ -40,12 +40,12 @@
   object-position: center;
 }
 
+// TODO: ręcznie zmieniać liczbę kolumn
 .grid-auto-fit {
   display: grid;
   gap: 2rem;
-  width: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(20rem, var(--max-card-width)));
-  place-content: center;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  place-content: start;
 }
 
 .my-12rem {
@@ -63,12 +63,6 @@
 
 .max-w-60rem {
   max-width: 60rem;
-}
-
-@media (min-width: 668px) {
-  .grid-auto-fit {
-    place-content: start;
-  }
 }
 
 .grid-all-columns {
