--- a/apps/client-web-app/src/styles.scss
+++ b/apps/client-web-app/src/styles.scss
@@ -6,7 +6,7 @@
 
 :root {
   --header-height: 4.8125rem;
-  --max-card-width: 24rem;
+  --max-card-width: 20rem;
   --border-radius: 1rem;
 }
 
@@ -19,6 +19,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: var(--font-family);
+}
+
+.scroller {
+  scrollbar-width: thin;
 }
 
 input {
