--- a/apps/client-web-app/src/assets/prime/_primeng-extends.scss
+++ b/apps/client-web-app/src/assets/prime/_primeng-extends.scss
@@ -1,4 +1,8 @@
-.p-menuitem-link-active {
+.p-steps .p-steps-item .p-menuitem-link {
+  background: transparent;
+}
+
+.p-menuitem-content > .p-menuitem-link-active {
   background-color: var(--surface-hover);
   border-radius: var(--border-radius);
 }
