Slighly change book details ui component
Change font size, margins and image size

--- a/apps/client-web-app/src/styles.scss
+++ b/apps/client-web-app/src/styles.scss
@@ -13,6 +13,8 @@
 html {
   scroll-behavior: smooth;
   font-size: 100%;
+  scrollbar-width: thin;
+  scrollbar-color: var(--text-color-secondary) var(--surface-hover);
 }
 
 h1,
