Create cart item component
Create a responsive cart item. In the feature will be moved to shared
lib. Change shell order layout.

--- a/libs/client-web-app/shell/ui/nav/src/lib/nav/nav.component.html
+++ b/libs/client-web-app/shell/ui/nav/src/lib/nav/nav.component.html
@@ -89,7 +89,7 @@
         ></i>
       </p-button>
 
-      @defer (when cartSidebarVisible()) {
+      @defer (on interaction(openCartSidebar)) {
         <lib-cart-sidebar
           [sidebarVisible]="cartSidebarVisible()"
           (onClose)="cartSidebarVisible.set(false)"
