--- a/libs/client-web-app/order/feature/shell/src/lib/shell/shell.component.css
+++ b/libs/client-web-app/order/feature/shell/src/lib/shell/shell.component.css
@@ -10,12 +10,7 @@
   }
 }
 
-.max-width-1440px {
-  max-width: 1440px;
-  width: 100%;
-}
-
-.container {
+.grid {
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
@@ -30,9 +25,10 @@
 }
 
 @media (min-width: 1200px) {
-  .container {
+  .grid {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
+    gap: 2rem;
   }
 
   .content {
