--- a/libs/client-web-app/order/feature/shell/src/lib/shell/shell.component.css
+++ b/libs/client-web-app/order/feature/shell/src/lib/shell/shell.component.css
@@ -1,7 +1,7 @@
 :host ::ng-deep {
   .p-steps ul {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
 
   .p-steps-title {
@@ -16,26 +16,16 @@
   gap: 1rem;
 }
 
-.content {
-  grid-row: 2 / 3;
-}
-
-.cart {
-  grid-row: 1 / 2;
-}
-
-@media (min-width: 1200px) {
+@media (min-width: 1400px) {
   .grid {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 0.6fr 0.4fr;
     grid-template-rows: 1fr;
     gap: 2rem;
   }
+}
 
-  .content {
-    grid-row: 1/2;
-  }
-
-  .cart {
-    grid-row: 1/2;
+@media (min-width: 1920px) {
+  .grid {
+    grid-template-columns: 0.7fr 0.3fr;
   }
 }
