--- a/apps/client-web/src/app/components/nav/nav.component.scss
+++ b/apps/client-web/src/app/components/nav/nav.component.scss
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
-  height: 4.25rem;
+  height: var(--header-height);
   padding: 0.5rem 1rem;
   z-index: 5;
   background-color: var(--surface-card);
@@ -25,6 +25,8 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  position: sticky;
+  top: 0;
 
   &__links {
     display: flex;
