--- a/apps/client-web/src/app/components/nav/nav.component.html
+++ b/apps/client-web/src/app/components/nav/nav.component.html
@@ -6,9 +6,7 @@
     </a>
     <p-divider layout="vertical" />
     <ul class="links">
-      <!-- <li> -->
-      <!--   <lib-categories /> -->
-      <!-- </li> -->
+      <ng-content select="app-categories" />
       @for (item of navItems; track item.id) {
         <li>
           <a
