--- a/libs/client-web/browse/feature/books/src/lib/filters/filters.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/filters/filters.component.html
@@ -1,8 +1,8 @@
 <div class="filters">
   <p-accordion>
-    <!-- <lib-tags-filter /> -->
+    <lib-tag-filter />
     <lib-author-filter />
     <lib-category-filter />
-    <!-- <lib-price-filter /> -->
+    <lib-price-filter />
   </p-accordion>
 </div>
