--- a/libs/client-web/browse/feature/books/src/lib/filters/author-filter/author-filter.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/filters/author-filter/author-filter.component.html
@@ -3,13 +3,14 @@
   [filterName]="filterName()"
   header="Authors"
   [parseName]="parseName"
-  [trackBy]="trackBy"
+  [parseId]="parseId"
   [items]="filter?.items ?? []"
   [selectedItems]="filter?.selectedItems ?? []"
   (selectedItemsEvent)="changeSelectedItems($event)"
+  (clearFilterSelectedItemsEvent)="clearFilterSelectedItems($event)"
 >
   <input
-    placeholder="Search for authors..."
+    placeholder="Search author"
     pInputText
     [formControl]="searchControl"
   />
