--- a/libs/client-web/browse/ui/src/lib/books-grid/books-grid.component.scss
+++ b/libs/client-web/browse/ui/src/lib/books-grid/books-grid.component.scss
@@ -26,7 +26,7 @@
   }
 }
 
-@container books-view (min-width: 768px) {
+@container books-view (min-width: 550px) {
   .books-grid {
     &__content {
       grid-template-columns: repeat(2, 1fr);
@@ -34,7 +34,7 @@
   }
 }
 
-@container books-view (min-width: 1024px) {
+@container books-view (min-width: 880px) {
   .books-grid {
     &__content {
       grid-template-columns: repeat(3, 1fr);
@@ -42,7 +42,17 @@
   }
 }
 
-@container books-view (min-width: 1536px) {
+@media (min-width: 1280px) {
+  .books-grid {
+    gap: 1.5rem;
+
+    &__content {
+      gap: 1.5rem;
+    }
+  }
+}
+
+@container books-view (min-width: 1280px) {
   .books-grid {
     &__content {
       grid-template-columns: repeat(4, 1fr);
@@ -50,7 +60,7 @@
   }
 }
 
-@container books-view (min-width: 2200px) {
+@container books-view (min-width: 1760px) {
   .books-grid {
     &__content {
       grid-template-columns: repeat(5, 1fr);
@@ -58,7 +68,7 @@
   }
 }
 
-@container books-view (min-width: 2800px) {
+@container books-view (min-width: 2200px) {
   .books-grid {
     &__content {
       grid-template-columns: repeat(6, 1fr);
@@ -66,7 +76,7 @@
   }
 }
 
-@container books-view (min-width: 3300px) {
+@container books-view (min-width: 2800px) {
   .books-grid {
     &__content {
       grid-template-columns: repeat(7, 1fr);
@@ -74,10 +84,18 @@
   }
 }
 
-@container books-view (min-width: 3700px) {
+@container books-view (min-width: 3300px) {
   .books-grid {
     &__content {
       grid-template-columns: repeat(8, 1fr);
+    }
+  }
+}
+
+@container books-view (min-width: 3700px) {
+  .books-grid {
+    &__content {
+      grid-template-columns: repeat(10, 1fr);
     }
   }
 }
