Create book route and detail-row component

--- a/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
+++ b/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
@@ -1,4 +1,4 @@
-<div [routerLink]="['/browse', book().id]" class="book-card">
+<div [routerLink]="['/book', book().id]" class="book-card">
   <img
     alt="Card"
     class="book-card__image"
