--- a/libs/client-web/browse/feature/book/src/lib/book.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/book.component.html
@@ -59,7 +59,7 @@
                 size="large"
                 [disabled]="amount.invalid"
                 [loading]="loading()"
-                (onClick)="addToCart(book()?.id)"
+                (onClick)="addToCart()"
               />
             </div>
           </div>
@@ -139,7 +139,7 @@
             size="large"
             [disabled]="amount.invalid"
             [loading]="loading()"
-            (onClick)="addToCart(book()?.id)"
+            (onClick)="addToCart()"
           />
         </div>
       </div>
