--- a/apps/client-web/src/app/app.component.html
+++ b/apps/client-web/src/app/app.component.html
@@ -1,10 +1,11 @@
 <p-toast />
-<app-nav>
+<app-nav [isAuthenticated]="isAuthenticated()" (logoutEvent)="logout()">
   <app-categories
     [categories]="(categories$ | async) ?? []"
     [loading]="!!(loading$ | async)"
     [error]="error$ | async"
   />
+  <lib-cart-sidebar />
 </app-nav>
 <div class="wrapper">
   <router-outlet />
