--- a/apps/client-web/src/styles.scss
+++ b/apps/client-web/src/styles.scss
@@ -201,3 +201,18 @@ p-button.w-full .p-button {
     border-bottom-left-radius: calc(var(--border-radius) * 2);
   }
 }
+
+.loading {
+  animation: pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  pointer-events: none;
+}
+
+@keyframes pulse {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
